--- a/src/routes/blogs/blogs.css
+++ b/src/routes/blogs/blogs.css
@@ -24,16 +24,35 @@ article {
     background: aqua
 }
 
+/* Alternating placement of posts */
+.post-flexbox article:nth-child(4n+1) {
+  grid-column: 1 / 2; /* Place in column A */
+}
+
+.post-flexbox article:nth-child(4n+2) {
+  grid-column: 2 / 3; /* Place in column B */
+}
+
+.post-flexbox article:nth-child(4n+3) {
+  grid-column: 2 / 3; /* Place in column B (next row) */
+}
+
+.post-flexbox article:nth-child(4n+4) {
+  grid-column: 3 / 4; /* Place in column C */
+}
+
 /* Handle different screen sizes */
 @media (max-width: 1024px) {
   .post-flexbox {
       grid-template-columns: repeat(2, 1fr); /* Two columns on smaller screens */
   }
 
-  .post-flexbox article:nth-child(2n+1):last-child {
-      grid-column: 1 / 3;
-      justify-self: center;
-      width: calc(50% - 20px);
+  .post-flexbox article:nth-child(odd) {
+      grid-column: 1 / 2; /* First column */
+  }
+
+  .post-flexbox article:nth-child(even) {
+      grid-column: 2 / 3; /* Second column */
   }
 }
 
@@ -41,20 +60,8 @@ article {
   .post-flexbox {
       grid-template-columns: 1fr; /* Single column on very small screens */
   }
-}
 
-/* Center the last row if there are two posts */
-.post-flexbox article:nth-last-child(2):nth-child(odd) {
-  grid-column: 2 / 3; /* Center the two posts */
-}
-
-.post-flexbox article:nth-last-child(2):nth-child(even) {
-  grid-column: 1 / 2; /* Center the two posts */
-}
-
-/* Center the last post if there's one post */
-.post-flexbox article:nth-last-child(1):nth-child(odd) {
-  grid-column: 2 / 3; /* Center the last post */
-  justify-self: center;
-  width: calc(33.333% - 20px); /* Maintain the same width as other articles */
+  .post-flexbox article {
+      grid-column: 1 / 2; /* Full width */
+  }
 }
