--- a/src/routes/blogs/blogs.css
+++ b/src/routes/blogs/blogs.css
@@ -34,6 +34,7 @@ article:nth-child(even) img:hover {
   flex-direction: column;
   justify-content: center;
   align-content: center;
+  row-gap: 1rem;
   padding-bottom: 1.5rem;
   text-align: center;
 }
